# gritty

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  breaking.sh  build.rs  cliff.toml  install.sh  log.txt  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: package.sh
.github/workflows/: release-plz.yml  release.yml  rust.yml
gritty-clap/: Cargo.toml  README.md
gritty-clap/src/: auth.rs  clone.rs  create.rs  delete.rs  lib.rs  list.rs
gritty-clap/src/auth/: mod.rs
gritty-clap/src/remote/: add.rs  mod.rs
gritty-clap/src/repo/: clone.rs  create.rs  delete.rs  fork.rs  list.rs  mod.rs
src/: args.rs  commands.rs  config.rs  error.rs  lib.rs  log.rs  main.rs
src/args/: completions.rs  mod.rs
src/args/remote/: add.rs  mod.rs
src/args/repo/: clone.rs  create.rs  fork.rs  list.rs  mod.rs
src/commands/: auth.rs  clone_repository.rs  completions.rs  create_config.rs  create_repository.rs  delete_repository.rs  list_remotes.rs  list_repositories.rs  mod.rs
src/commands/auth/: login.rs  mod.rs  status.rs
src/commands/remote/: add.rs  list.rs  mod.rs
src/commands/repo/: clone.rs  create.rs  delete.rs  fork.rs  list.rs  mod.rs
src/config/: colors.rs  mod.rs
src/remote/: gitea.rs  github.rs  gitlab.rs  mod.rs
src/remote/gitea/: mod.rs
src/remote/github/: mod.rs
src/remote/gitlab/: error.rs  mod.rs
