[package]
name = "gritty"
version = "0.5.0"
edition = "2021"

[features]
default = [ "color", "keyring" ]
color = [ "clap/color", "dep:ansi_term" ]
keyring = [ "dep:keyring" ]

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
teatime = { git = "https://github.com/benpueschel/teatime.git" }
octocrab = "0.38.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full", "macros"] }
toml = "0.8.14"
keyring = { version = "2.3.3", optional = true }
rpassword = "7.3.1"
ansi_term = { version = "0.12.1", optional = true }
clap = { version = "4.5.8", features = ["derive", "deprecated"] }
gitlab = "0.1701.0"
urlencoding = "2.1.3"
