[package]
name = "gritty"
version = "1.0.1"
edition = "2021"
description = "A command line tool to manage your remote repositories on GitHub, GitLab and Gitea remotes"
repository = "https://github.com/benpueschel/gritty"
authors = ["Ben Püschel"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
	"git",
	"github",
	"gitlab",
	"gitea",
	"cli",
	"command-line",
	"version-control",
	"remote",
	"repository",
	"management",
]

[features]
default = ["keyring"]
keyring = ["dep:keyring"]

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
teatime = { git = "https://github.com/benpueschel/teatime.git" }
octocrab = "0.38.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full", "macros"] }
toml = "0.8.14"
keyring = { version = "2.3.3", optional = true }
rpassword = "7.3.1"
ansi_term = "0.12.1"
clap = { version = "4.5.8", features = ["derive", "deprecated", "color"] }
gritty-clap = { path = "gritty-clap" }
gitlab = "0.1701.0"
urlencoding = "2.1.3"
human-panic = "2.0.1"

[build-dependencies]
clap = { version = "4.5.8", features = ["derive", "deprecated"] }
clap_mangen = "0.2.23"
gritty-clap = { path = "gritty-clap" }
