[package]
name = "gritty-clap"
version = "2.1.0"
edition = "2021"
description = "Clap command for gritty"
license = "MIT"
repository = "https://github.com/benpueschel/gritty"
authors = ["Ben Püschel"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.8", features = [
	"derive",
	"deprecated",
	"color",
	"cargo",
] }
